--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
     sdk: flutter
   logger: ^1.0.0
   flutter_bloc: ^7.0.0
-  equatable: ^1.0.0
+  equatable: ^2.0.0-nullsafety.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -50,7 +50,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/triangle.png
-    - assets/trapezoid.png
+    - assets/trapez.png
+    - assets/rectangleWithoutTriangle.png
+    - assets/rectangleWithTriangle.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
