--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   logger: ^1.0.0
   flutter_bloc: ^7.0.0
   equatable: ^2.0.0-nullsafety.0
+  provider: ^5.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
