--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,13 +25,14 @@ dependencies:
     sdk: flutter
   logger: ^1.0.0
   flutter_bloc: ^7.0.0
-  equatable: ^2.0.0-nullsafety.0
+  equatable: ^2.0.0
   provider: ^5.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+
+  test: ^1.16.8
 
 dev_dependencies:
   flutter_test:
