--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
-  test: ^1.16.8
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  bloc_test: ^8.0.0
   pedantic: ^1.11.0
+  mockito:
 
 
 # For information on the generic Dart part of this file, see the
