--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,11 @@ dependencies:
   flutter:
     sdk: flutter
   logger: ^1.0.0
+  http: ^0.13.3
   flutter_bloc: ^7.0.0
-  equatable: ^2.0.0
+  equatable: ^2.0.2
   provider: ^5.0.0
+  enum_to_string: ^2.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -54,11 +56,7 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/triangle.png
-    - assets/trapez.png
-    - assets/rectangleWithoutTriangle.png
-    - assets/rectangleWithTriangle.png
+  # assets:
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
