--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,10 +25,10 @@ dependencies:
     sdk: flutter
   logger: ^1.0.0
   http: ^0.13.3
-  flutter_bloc: ^7.0.0
-  equatable: ^2.0.2
+  flutter_bloc: ^7.0.1
+  equatable: ^2.0.3
   provider: ^5.0.0
-  get_it: ^7.0.1
+  get_it: ^7.1.4
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -40,8 +40,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   bloc_test: ^8.0.2
-  pedantic: ^1.11.0
-  mockito:
+  pedantic: ^1.11.1
+  mocktail: ^0.1.4
 
 
 # For information on the generic Dart part of this file, see the
